[Media Router Action] Disable "Report an issue" context menu item for incognito

The menu item for sending feedback was either no-op (guest mode) or showing an
error page (incognito) before the regression. This CL disables the menu item for
incognito and guest mode.

Bug: 747792, 729988
Change-Id: I8338015b5305273c95ad022afdc056a55ffb2591