chrome/browser/media/router/event_page_request_manager_factory.cc
@@ -6,6 +6,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "chrome/browser/media/router/event_page_request_manager_factory.h"
 
 #include "chrome/browser/media/router/event_page_request_manager.h"
+#include "chrome/browser/profiles/incognito_helpers.h"
 #include "components/keyed_service/content/browser_context_dependency_manager.h"
 #include "extensions/browser/process_manager_factory.h"
 
@@ -37,6 +38,11 @@ EventPageRequestManagerFactory::EventPageRequestManagerFactory()
 }
 
 EventPageRequestManagerFactory::~EventPageRequestManagerFactory() = default;
+
+content::BrowserContext* EventPageRequestManagerFactory::GetBrowserContextToUse(
+    content::BrowserContext* context) const {
+  return chrome::GetBrowserContextRedirectedInIncognito(context);
+}
 
 KeyedService* EventPageRequestManagerFactory::BuildServiceInstanceFor(
     BrowserContext* context) const {
