chrome/browser/media/router/event_page_request_manager_factory.h
@@ -32,6 +32,9 @@ class EventPageRequestManagerFactory
   EventPageRequestManagerFactory();
   ~EventPageRequestManagerFactory() override;
 
+  content::BrowserContext* GetBrowserContextToUse(
+      content::BrowserContext* context) const override;
+
   KeyedService* BuildServiceInstanceFor(
       content::BrowserContext* context) const override;
 
