chrome/browser/ui/toolbar/media_router_contextual_menu_unittest.cc
@@ -133,6 +133,19 @@ TEST_F(MediaRouterContextualMenuUnitTest, ManageDevicesDisabledInIncognito) {
   EXPECT_EQ(-1, model_->GetIndexOfCommandId(IDC_MEDIA_ROUTER_MANAGE_DEVICES));
 }
 
+// "Report an issue" should be present for normal profiles but not for
+// incognito.
+TEST_F(MediaRouterContextualMenuUnitTest, EnableAndDisableReportIssue) {
+  EXPECT_NE(-1, model_->GetIndexOfCommandId(IDC_MEDIA_ROUTER_REPORT_ISSUE));
+
+  // Create the MediaRouterAction under an incognito profile.
+  profile()->ForceIncognito(true);
+  action_ = base::MakeUnique<MediaRouterAction>(
+      browser(), browser_action_test_util_->GetToolbarActionsBar());
+  model_ = static_cast<ui::SimpleMenuModel*>(action_->GetContextMenu());
+  EXPECT_EQ(-1, model_->GetIndexOfCommandId(IDC_MEDIA_ROUTER_REPORT_ISSUE));
+}
+
 // Tests whether the cloud services item is correctly toggled. This menu item
 // is only availble on official Chrome builds.
 TEST_F(MediaRouterContextualMenuUnitTest, ToggleCloudServicesItem) {
